--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="loco.css">
+    <link rel="stylesheet" href="mediaqueries.css">
 </head>
 <body>
     <div id="mincircle"></div>
